BB-15395: Fix Accounts contacts - Fix layout issues

--- a/src/Oro/Bundle/FormBundle/Resources/public/css/scss/mobile/form.scss
+++ b/src/Oro/Bundle/FormBundle/Resources/public/css/scss/mobile/form.scss
@@ -7,7 +7,7 @@
 
 .entities.list-group {
     .list-group-item {
-        width: $entities-list-mobile-group-item-width;
+        width: calc(#{$entities-list-mobile-group-item-width} - #{$entities-list-group-item-offset-start});
     }
 }
 
